--- a/app/src/main/res/layout/fragment_comic.xml
+++ b/app/src/main/res/layout/fragment_comic.xml
@@ -1,9 +1,10 @@
-<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto">
+    android:background="@android:color/background_dark">
 
-    <com.facebook.drawee.view.SimpleDraweeView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/imgComic"
         android:layout_width="match_parent"
         android:layout_height="0dp"
