--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,15 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/icDate"
-        android:icon="@drawable/ic_date_range_white_24dp"
+        android:icon="@drawable/ic_date_range_black_24dp"
         app:showAsAction="always"
         android:title="@string/change_date">
     </item>
 
     <item
         android:id="@+id/icRandom"
-        android:icon="@drawable/ic_refresh_white_24dp"
+        android:icon="@drawable/ic_refresh_black_24dp"
         app:showAsAction="ifRoom"
         android:title="@string/fetch_random">
     </item>
+
+    <item android:id="@+id/action_licenses"
+        android:title="@string/action_licenses"
+        app:showAsAction="never"/>
+
 </menu>
